--- a/src/javax/sip/message/package.html
+++ b/src/javax/sip/message/package.html
@@ -29,8 +29,15 @@ A message Body contains a session description  	. This format is represented
 as an Object in this specification, which	allows the body to be a String
 or an Object type defined the Session Description Protocol (SDP) specification.<br>
 <p>
-   Additionally this package contains a MessageFactory class that defines 
+   Additionally this package contains:
+   <ul>
+   	<li>a MessageFactory class that defines 
 methods for creating new requests and responses. The MessageFactory is a 
-singleton object, which can be obtained from the {@link javax.sip.SipFactory}.   
+singleton object, which can be obtained from the {@link javax.sip.SipFactory}. </li>
+    <li>RequestLine : an interface for the SIP Request Line</li>
+	<li>StatusLine: An interface for the SIP Status Line</li>
+	<li>MulitpartMimeContent and Content: Interfaces for Multpart-Mime messages</li>
+   </ul> 
+	  
 </body>
 </html>
