--- a/src/javax/sip/header/ims/package.html
+++ b/src/javax/sip/header/ims/package.html
@@ -1,3 +1,4 @@
+<body>
 This package includes files that are relevant to the IP Multimedia System ( IMS ) 3GPP project.
 The following RFCs are suppored by the headers in this package:
 
@@ -22,3 +23,4 @@ for Registering Non-Adjacent Contacts
 
 In addition to the above, some enhancements of WWWAuthenticateHeader that are specific to 
 IMS are included in this package.
+</body>
