--- a/src/javax/sip/overview.html
+++ b/src/javax/sip/overview.html
@@ -178,15 +178,24 @@ stateful or transaction stateful components such as stateful proxy servers
 retransmissions is dependent on the application. All retransmissions are
 handled by the stack for user agents (ie. dialog stateful applications). </p>
 
-<p>The updates incorporated in this release can be found in the <a
-href="change-log.html">Change-Log</a>.</p>
+</p>
 
 <h2>Specification Leads</h2>
 
-<p class=MsoNormal>Phelim O Doherty, BEA Systems Inc.<br>
+<p class=MsoNormal>Phelim O Doherty, Oracle Inc.<br>
 Mudumbai Ranganathan, National Instituate of Standards and Technology (NIST). </p>
 
-<p>The specification leads would like to acknowledge effort and contributions
+<p>Version 2.0 Acknowledgements:
+The specification leads acknowledge the contributions of the
+following individuals to version 2.0 of this specification: Jeroen van
+Bemmel (Lucent), Emil Ivov (Sip Communicator), Jean Deruelle (Red Hat),
+Alexandre Miguel Silva Santos (P.T. Innovacau), Aaayush Bhatnagar (Rancore
+Technologies).  This specification has been a community effort that has
+benifited from numerous use cases over the years. The help of the JAIN-SIP
+user community in identifying these use cases is gratefully acknowledged.
+
+<p>Version 1.2 Acknowledgements:
+The specification leads would like to acknowledge effort and contributions
 to the this specification from 8x8, BEA systems, dynamicsoft, HP, IBM, Lucent, Nortel
 Networks, NIST, Open Cloud, Radvision, Siemens AG, Sun Microsystems. The
 specification leads gratefully acknowledge contributions from Jeroen van Bemmel
