--- a/src/javax/sip/change-log.html
+++ b/src/javax/sip/change-log.html
@@ -759,7 +759,7 @@ O'Doherty (Sun), <span class=SpellE>Ranganathan</span> <span class=SpellE>Mudumb
   the <span class=SpellE>SipProvider</span> uses the same transport for sending
   responses that was used for sending the outbound request.<o:p></o:p></p>
   <h4 style='margin-left:18.0pt'><span class=SpellE><span style='font-size:
-  12.0pt'><IT></IT>SipProvider</span></span><span style='font-size:12.0pt'><br>
+  12.0pt'>SipProvider</span></span><span style='font-size:12.0pt'><br>
   </span><span style='font-size:12.0pt;font-weight:normal;mso-bidi-font-weight:
   bold'>Add new method <span class=SpellE><span class=GramE>getNewClientDialog</span></span><span
   class=GramE>(</span>Response).<br>
