--- a/src/javax/sip/overview.html
+++ b/src/javax/sip/overview.html
@@ -203,7 +203,7 @@ The specification leads acknowledge the contributions of the
 following individuals to version 2.0 of this specification: Jeroen van
 Bemmel (Lucent), Emil Ivov (Sip Communicator), Jean Deruelle (Red Hat),
 Alexandre Miguel Silva Santos (P.T. Innovacau), Aaayush Bhatnagar (Rancore
-Technologies).  This specification has been a community effort that has
+Technologies), Ran Bar-Lavie (IBM corp.).  This specification has been a community effort that has
 benifited from numerous use cases over the years. The help of the JAIN-SIP
 user community in identifying these use cases is gratefully acknowledged.
 
