--- a/src/javax/sip/overview.html
+++ b/src/javax/sip/overview.html
@@ -192,6 +192,9 @@ stateful or transaction stateful components such as stateful proxy servers
 retransmissions is dependent on the application. All retransmissions are
 handled by the stack for user agents (ie. dialog stateful applications). 
 </p>
+<h2>Changes since version 1.2 </h2>
+There have been significant changes since the last release of this specification.
+The changes since version 1.2 of this specification are detailed <a href="change-log.html">here</a>.
 
 <h2>Specification Leads</h2>
 
@@ -199,13 +202,14 @@ handled by the stack for user agents (ie. dialog stateful applications).
 Mudumbai Ranganathan, National Instituate of Standards and Technology (NIST). </p>
 
 <p>Version 2.0 Acknowledgements:
-The specification leads acknowledge the contributions of the
-following individuals to version 2.0 of this specification: Jeroen van
-Bemmel (Lucent), Emil Ivov (Sip Communicator), Jean Deruelle (Red Hat),
-Alexandre Miguel Silva Santos (P.T. Innovacau), Aaayush Bhatnagar (Rancore
-Technologies), Ran Bar-Lavie (IBM corp.).  This specification has been a community effort that has
-benifited from numerous use cases over the years. The help of the JAIN-SIP
-user community in identifying these use cases is gratefully acknowledged.
+The specification leads acknowledge the contributions of the following
+individuals to version 2.0 of this specification: Jeroen van Bemmel
+(Lucent), Emil Ivov (Sip Communicator (AKA JITSI)), Jean Deruelle (Red Hat),
+Vladimir Ralev (Red Hat), Alexandre Miguel Silva Santos (P.T. Innovacau),
+Aaayush Bhatnagar (Rancore Technologies), Ran Bar-Lavie (IBM corp.).
+This specification has been a community effort that has benifited from
+numerous use cases over the years. The help of the JAIN-SIP user community
+in identifying these use cases is gratefully acknowledged.
 
 <p>Version 1.2 Acknowledgements:
 The specification leads would like to acknowledge effort and contributions
